<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:layout_margin="20dp"
    app:cardCornerRadius="25dp">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:padding="10dp"
            android:text="@string/coin_dialog_title"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/txt_color"

            android:textStyle="bold" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="5dp"

            android:background="@drawable/drop_shadow" />

        <TextView
            android:id="@+id/title_coin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/coin_message"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView

            android:id="@+id/title_coin_subtotal"
            android:layout_width="match_parent"
            android:layout_height="63dp"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/coin_message_sub"
            android:textColor="@color/black"
            android:textSize="18dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/skip"
            android:layout_width="match_parent"
            android:layout_height="58dp"
            android:background="@color/bottom_bg_color"
            android:gravity="center"
            android:padding="5dp"
            android:text="@string/skip_btn_message"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/colorPrimaryDark"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/watch_now"
            android:layout_width="match_parent"
            android:layout_height="71dp"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:padding="10dp"
            android:text="GUARDA VIDEO"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
            android:textColor="@color/txt_color"
            android:textStyle="bold" />

    </LinearLayout>
</androidx.cardview.widget.CardView>