<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootview"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <!--android:background="@drawable/_5"-->

    <RelativeLayout
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="?android:attr/actionBarSize"
        android:background="@color/colorPrimary">

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_margin="5dp"
            app:srcCompat="@drawable/ic_back" />

        <TextView
            android:id="@+id/tvLevel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="5dp"
            android:layout_toRightOf="@+id/back"
            android:text="ISTRUZIONI:"
            android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
            android:textColor="@color/txt_color"
            android:textStyle="bold" />

    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="6dp"

        android:layout_below="@id/relativeLayout"
        android:background="@drawable/drop_shadow" />

    <RelativeLayout
        android:id="@+id/contents_view"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/divider"
        >

        <ScrollView
            android:id="@+id/scrollView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_above="@+id/button_layout">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                >


                <LinearLayout
                    android:id="@+id/step1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/textView2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center|center_horizontal"
                        android:paddingBottom="5dp"
                        android:text="Regole del gioco:"
                        android:textColor="@color/testo"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:id="@+id/imageView2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/check_mark" />

                        <TextView
                            android:id="@+id/textView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center_horizontal|left"
                            android:textColor="@color/testo"
                            android:text="Per ogni risposta esatta +5 punti" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/imageView3"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:src="@drawable/cancel_mark" />

                        <TextView
                            android:id="@+id/textView4"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:gravity="center|left"
                            android:textColor="@color/testo"
                            android:text="Per ogni risposta errata -2 punti" />

                    </LinearLayout>

                    <TextView
                        android:id="@+id/textView5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:paddingLeft="5dp"
                        android:paddingTop="10dp"
                        android:paddingRight="5dp"
                        android:paddingBottom="10dp"
                        android:textColor="@color/testo"
                        android:text="Guadagno monete: +1 ogni 2 risposte esatte, +2 ogni 5, +3 ogni 8, +4 ogni 10." />

                    <ScrollView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:baselineAligned="false">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"/>
                    </ScrollView>

                </LinearLayout>

                <View
                    android:id="@+id/divider2"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_below="@+id/step1"
                    android:background="@drawable/drop_shadow" />

                <TextView
                    android:id="@+id/tvLifline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider2"
                    android:layout_centerHorizontal="true"
                    android:padding="5dp"
                    android:text="Aiuti"
                    android:textColor="@color/testo"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/step2"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/tvLifline"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:weightSum="4">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="3dp"
                            android:src="@drawable/fifty" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="3dp"
                            android:src="@drawable/skip" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="3dp"
                            android:src="@drawable/audiance" />

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:padding="3dp"
                            android:src="@drawable/timer" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:weightSum="4">

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/view_left_right_margin"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="50 – 50 : per rimuovere 2 opzioni su 4. \n(Costo: 4 monete)."
                            android:textColor="@color/testo" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/view_left_right_margin"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="Salta la domanda: è possibile passare alla domanda successiva senza togliere punti. \n(Costo: 4 monete)."
                            android:textColor="@color/testo" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/view_left_right_margin"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="Sondaggio del pubblico: usa la riposta più usata dagli altri utenti. \n(Costo: 4 monete)."
                            android:textColor="@color/testo" />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="@dimen/view_left_right_margin"
                            android:layout_weight="1"
                            android:gravity="center_vertical"
                            android:text="Azzerra il tempo: Fai partire il tempo da zero se hai bisogno di più tempo. \n(Costo: 4 monete)."
                            android:textColor="@color/testo" />
                    </LinearLayout>

                </LinearLayout>

                <View
                    android:id="@+id/divider3"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_below="@+id/step2"
                    android:background="@drawable/drop_shadow" />

                <LinearLayout
                    android:id="@+id/step3"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider3"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/step3_des1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:padding="5dp"
                        android:text="@string/step3"
                        android:textColor="@color/testo"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:src="@drawable/rank" />

                        <TextView
                            android:id="@+id/step3_des2"

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/view_left_right_margin"
                            android:layout_marginTop="2dp"
                            android:text="Confronta il tuo punteggio con quello di altri utenti."
                            android:textColor="@color/testo" />
                    </LinearLayout>
                </LinearLayout>

                <View
                    android:id="@+id/divider4"
                    android:layout_width="match_parent"
                    android:layout_height="4dp"
                    android:layout_below="@+id/step3"
                    android:background="@drawable/drop_shadow" />

                <LinearLayout
                    android:id="@+id/step4"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/divider4"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/step4_des1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:padding="5dp"
                        android:text="@string/step4"
                        android:textColor="@color/testo"
                        android:textStyle="bold" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_margin="3dp"
                            android:src="@drawable/achive" />

                        <TextView
                            android:id="@+id/step4_des2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginLeft="@dimen/view_left_right_margin"
                            android:text="Risultati e livelli raggiunti"
                            android:textColor="@color/testo"
                            />
                    </LinearLayout>

                </LinearLayout>
            </RelativeLayout>
        </ScrollView>

        <androidx.cardview.widget.CardView
            android:id="@+id/button_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            app:cardCornerRadius="25dp"
            app:cardUseCompatPadding="true">

            <Button
                android:id="@+id/ok_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:background="@drawable/bg_gradient"
                android:text="@string/lets_play"
                android:textAllCaps="false"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Medium"
                android:textColor="@color/white"
                android:textStyle="bold" />
        </androidx.cardview.widget.CardView>
    </RelativeLayout>

</RelativeLayout>